--- a/uf1/nf2/pt4-1/pt4-1.tex
+++ b/uf1/nf2/pt4-1/pt4-1.tex
@@ -29,13 +29,13 @@
 \fancyhead[L]{\includegraphics*[height=35pt]{provencana_bw.pdf}}
 \fancyhead[R]{
 	{\scshape\scriptsize Mòdul \modulnum: \modulnom}\\
-	{\scshape\footnotesize \acttipus \space  - \actnom}\\
+	{\scshape\footnotesize \acttipus \space - \actnom}\\
 	{\scshape\small Eina Coma Bages}}
 
 \addtolength{\textheight}{2cm}
 
 %% Comandes personalitzades
-\newcommand{\mygraphic}[2][height=0.4\textheight]{\begin{center}
+\newcommand{\mygraphic}[2][width=\textwidth]{\begin{center}
 		\centering\includegraphics[#1]{#2}\par
 \end{center}}
 
@@ -44,70 +44,155 @@
 \begin{document}
 \include{portada.tex}
 
+\tableofcontents
+
 \newpage
 \textsc{1. Visualitza l’arxiu que conté la base de dades del tots els usuaris registrats al sistema. Quants usuaris hi ha en total? Quantes comptes són del sistema? I del root? I d’usuaris personals? ¿quin rang d’UID’s tenen cada grup?}
 
+Hi ha 49 usuaris, 48 del sistema. El root té l'UID 0 i els usuaris personals comencen amb l'UID 1000.
+\mygraphic{imatges/1.png}
+
+\newpage
 \textsc{2. Crea una carpeta anomenada “usuaris” dintre del directori personal del root. Fes una copia del arxiu que conté la base de dades del tots els usuaris registrats al sistema, amb el nom “usuaris.old.txt”.}
 
+\mygraphic{imatges/2.png}
+
+\newpage
 \textsc{3. Visualitza l’arxiu que conté la base de dades del tots els grups registrats al sistema. Quants grups hi ha en total? Quants grups són del sistema? I del root? I d’usuaris personals? ¿quin rang d’GID’s tenen cada grup?}
 
+Hi ha 77 grups, 76 del sistema. El grup 0 és del root i els d'usuaris comencen amb el 1000.
+\mygraphic{imatges/3.png}
+
+\newpage
 \textsc{4. Crea dintre de la carpeta “usuaris” una copia de l’arxiu que conté la base de dades del tots els grups registrats al sistema, amb el nom “grups.old.txt”.}
+\mygraphic{imatges/4.png}
 
+\newpage
 \textsc{5. Visualitza l’arxiu que conté les contrasenyes encriptades dels usuaris i fes una copia d’aquest arxiu a la carpeta “usuaris” amb el nom “contrasenya\_usuaris.old.txt”.}
+\mygraphic{imatges/5a.png}
+\mygraphic{imatges/5b.png}
 
+\newpage
 \textsc{6. Visualitza l’arxiu que conté les contrasenyes encriptades dels grups i fes una copia d’aquest arxiu a la carpeta “usuaris” amb el nom “contrasenya\_grups.old.txt”.}
+\mygraphic{imatges/6a.png}
+\mygraphic{imatges/6b.png}
 
-\textsc{7. En sessió d’alumne crea una copia de seguretat dels arxius  /etc/passwd i /etc/group amb els noms /etc/passwd.old i /etc/group.old.  Dóna d’alta manualment la usuària “artesana”, editant  l’arxiu /etc/passwd i afegint una nova entrada per ella, amb les dades següents (compte, no estan en el mateix ordre que en l’arxiu /etc/passwd ):}
+\newpage
+\section{Creació manual d’un usuari}
+\textsc{7. En sessió d’alumne crea una copia de seguretat dels arxius /etc/passwd i /etc/group amb els noms /etc/passwd.old i \linebreak /etc/group.old. Dóna d’alta manualment la usuària “artesana”, editant l’arxiu /etc/passwd i afegint una nova entrada per ella, amb les dades següents (compte, no estan en el mateix ordre que en l’arxiu /etc/passwd ):}
 
 \begin{itemize}
-\item Login: artesana
-\item Shell: /bin/bash
-\item UID:2000
-\item GID:2000
-\item Contrasenya: (en blanc)
-\item Gecos: (en blanc)
-\item Directori d’inici: /home/artesana
+\item \textsc{Login: artesana}
+\item \textsc{Shell: /bin/bash}
+\item \textsc{UID:2000}
+\item \textsc{GID:2000}
+\item \textsc{Contrasenya: (en blanc)}
+\item \textsc{Gecos: (en blanc)}
+\item \textsc{Directori d’inici: /home/artesana}
 \end{itemize}
 
-\textsc{8. Pots entrar en una nova sessió com artesana? Et demana contrasenya per autenticarte? Quin és el seu directori d’inici? Amb quina shell s’incorpora? Quina informació obté de la ordre id? S’ha produït alguna nova entrada en l’arxiu /etc/group? I en l’arxiu  /etc/shadow? Pots crear nous arxius? On els crea? Qui és el propietari? Qui és el grup propietari?}
+\mygraphic{imatges/7a.png}
+\mygraphic{imatges/7b.png}
 
+\textsc{8. Pots entrar en una nova sessió com artesana? Et demana contrasenya per autenticarte? Quin és el seu directori d’inici? Amb quina shell s’incorpora? Quina informació obté de la ordre id? S’ha produït alguna nova entrada en l’arxiu /etc/group? I en l’arxiu /etc/shadow? Pots crear nous arxius? On els crea? Qui és el propietari? Qui és el grup propietari?}
 
-\textsc{9. Crea el directori d’inici (/home/artesana) per la usuària artesana. Quin és el seu propietari? Quins permisos té el directori  /home/artesana? Traspassa la propietat del directori d’inici a l’usaria i grup artesana. Quins permisos té ara el directori /home/artesana i quin és el seu propietari?}
+No demana contrasenya ni té directori d'inici, però pot crear arxius en directoris on tingui permís (/tmp, per exemple). L'usuari artesana n'és el propietari, però de grup propietari només mostra el GID 2000, ja que no existeix cap grup amb aquest id. No hi ha noves entrades en els fitxers de group ni shadow i fa servir bash.
+\mygraphic{imatges/8.png}
 
-\textsc{10.  Dóna d’alta manualment al grup “artesana”, editant  l’arxiu /etc/group afegint la següent entrada per aquest grup:}
-Nom del grup: artesana
-Contrasenya: (en blanc)
-GID:2000
+\newpage
+\textsc{9. Crea el directori d’inici (/home/artesana) per la usuària artesana. Quin és el seu propietari? Quins permisos té el directori /home/artesana? Traspassa la propietat del directori d’inici a l’usaria i grup artesana. Quins permisos té ara el directori /home/artesana i quin és el seu propietari?}
 
-\textsc{Et demana contrasenya per autenticarte quan canvies a la sessió d’artesana? Quin és el seu directori d’inici? Amb quina shell s’incorpora? S’ha produït alguna nova entrada en l’arxiu /etc/group? I en l’arxiu  /etc/shadow? Pots traspassar la propietat del directori d’inici al grup artesana. Pots crear nous arxius? On els crea? Qui és el propietari? Qui és el grup propietari?}
+D'entrada el propietari és root, però quan trespassem la propietat a artesana deixa de ser-ho. El grup propietari segueix sent root perquè el grup artesana no existeix.
+\mygraphic{imatges/9.png}
 
-\textsc{11.  Habilita la contrasenya per la usuària artesana. Edita l’arxiu /etc/passwd i afegeix una “x” en el camp contrasenya. Edita  l’arxiu /etc/shadow i afegeix una nova entrada al final de l’arxiu, copiant la mateixa línia que la corresponent a l’usuari alumne. Canvia  en la línia copiada, “alumne” per “artesana”. D’aquesta manera, artesana tindrà la mateixa contrasenya que alumne, i totes les opcions de seguretat respecte de la contrasenya que les que té la usuària alumne. Et demana contrasenya per autenticarte al canviar a sessió d’artesana?}
+\newpage
+\textsc{10. Dóna d’alta manualment al grup “artesana”, editant l’arxiu /etc/group afegint la següent entrada per aquest grup:}
+\begin{itemize}
+	\item Nom del grup: artesana
+	\item Contrasenya: (en blanc)
+	\item GID:2000
+\end{itemize}
+\mygraphic{imatges/10a.png}
 
-\textsc{12.  Quin és el contingut del directori d’inici de la usuària artesana? Hi ha arxius ocults? Quines són les variables de entorn? Hi ha diferencies respecte del directori d’inici de l’usuari alumne? Copia el contingut del directori d’inici (inclosos els arxius ocults) a l’arxiu home.txt, i afegeix al final una línia de ratlles “----....----“. Copia del contingut del directori d’inici només els arxius ocults a l’arxiu ocult.txt, i afegeix al final una línia de ratlles “----....----“. Copia les variables de entorn i el seu contingut a l’arxiu var.txt,  i afegeix al final una línia de ratlles “--.....--“}
+\textsc{Et demana contrasenya per autenticarte quan canvies a la sessió d’artesana? Quin és el seu directori d’inici? Amb quina shell s’incorpora? S’ha produït alguna nova entrada en l’arxiu \linebreak /etc/group? I en l’arxiu /etc/shadow? Pots traspassar la propietat del directori d’inici al grup artesana. Pots crear nous arxius? On els crea? Qui és el propietari? Qui és el grup propietari?}
 
+La contrasenya segueix sense ser necesaria. El directori d'inici és el que hem creat nosaltres i ja en podem traspassar la propietat al grup artesana. Els arxius que crea son propietat de l'usuari i grup artesana. No hi ha cap nova entrada a shadow, a group hi ha la que hem afegit nosaltres.
+\mygraphic{imatges/10b.png}
+
+\newpage
+\textsc{11. Habilita la contrasenya per la usuària artesana. Edita l’arxiu /etc/passwd i afegeix una “x” en el camp contrasenya. Edita l’arxiu /etc/shadow i afegeix una nova entrada al final de l’arxiu, copiant la mateixa línia que la corresponent a l’usuari alumne. Canvia en la línia copiada, “alumne” per “artesana”. D’aquesta manera, artesana tindrà la mateixa contrasenya que alumne, i totes les opcions de seguretat respecte de la contrasenya que les que té la usuària alumne. Et demana contrasenya per autenticarte al canviar a sessió d’artesana?}
+\mygraphic{imatges/11a.png}
+\mygraphic{imatges/11b.png}
+
+Una vegada fet aquest canvi ja demana contrasenya a l'iniciar sessió d'artesana.
+
+\newpage
+\textsc{12. Quin és el contingut del directori d’inici de la usuària artesana? Hi ha arxius ocults? Quines són les variables de entorn? Hi ha diferencies respecte del directori d’inici de l’usuari alumne? Copia el contingut del directori d’inici (inclosos els arxius ocults) a l’arxiu home.txt, i afegeix al final una línia de ratlles “----....----“. Copia del contingut del directori d’inici només els arxius ocults a l’arxiu ocult.txt, i afegeix al final una línia de ratlles “----....----“. Copia les variables de entorn i el seu contingut a l’arxiu var.txt, i afegeix al final una línia de ratlles “--.....--“}
+
+Només hi ha el fitxer que hem creat anteriorment i l'historial d'ordres del bash.
+\mygraphic{imatges/12a.png}
+\mygraphic{imatges/12b.png}
+\mygraphic{imatges/12c.png}
+
+\newpage
 \textsc{13. Copia els arxius de configuració de comptes que hi ha en el directori /etc/skel al directori /home/artesana Ara, quin és el contingut del directori d’inici de la usuària artesana? Hi ha arxius ocults? Quins són els propietaris? Hi ha diferencies respecte del contingut del directori d’inici de l’usuari alumne? Copia només els arxius ocults del directori d’inici a l’arxiu ocult.txt, sense esborrar el seu contingut actual i afegint al final una línia de ratlles “----....----“ (así pots comparar amb el contingut del que hi havia abans). Compara les diferencies per veure els nous arxius afegits. Traspassa la propietat dels nous arxius copiats a la usuària i grup artesana. Copia les variables de entorn i el seu contingut a l’arxiu var.txt, sense esborrar el seu contingut actual i afegeix al final una línia de ratlles “--.....--“ . Compara les diferencies de les variables de entorn abans i desprès de la modificació.}
 
-\textsc{14.  Canvia a la sessió de la usuària artesana i, copia les variables de entorn i el seu contingut, a l’arxiu var.txt, sense esborrar el seu contingut actual i afegint al final una línia de ratlles “--.....--“ . Compara les diferencies de les variables de entorn abans i desprès de l’inici de sessió.}
+Ara ja hi ha els fitxers del directori skel, que declaren vairables d'entorn. Quan els copiem, són propietat de root.
+\mygraphic{imatges/13a.png}
+\mygraphic{imatges/13b.png}
+\mygraphic{imatges/13c.png}
+\mygraphic{imatges/13d.png}
 
-\textsc{15.  Inclou manualment a la usuària “artesana” en els grups “àudio” i  “sudo” (seran grups secundaris) editant  l’arxiu /etc/group (la usuària “artesana” té com grup principal el grup “artesana”) Visualitza els resultats amb la comanda id.}
+\newpage
+\textsc{14. Canvia a la sessió de la usuària artesana i, copia les variables de entorn i el seu contingut, a l’arxiu var.txt, sense esborrar el seu contingut actual i afegint al final una línia de ratlles “--.....--”. Compara les diferencies de les variables de entorn abans i desprès de l’inici de sessió.}
+\mygraphic{imatges/14a.png}
+\mygraphic{imatges/14b.png}
+\mygraphic{imatges/14c.png}
 
-\textsc{16. Investiga les conseqüències de col·locar en el camp corresponent a la contrasenya de la usuària artesana en l’arxiu /etc/passwd, els caràcters “*” i el caràcter blanc. Investiga les conseqüències de col·locar un “!” com primer caràcter en el camp corresponen a la contrasenya encriptada de la usuària artesana en l’arxiu /etc/shadow.}
+\textsc{15. Inclou manualment a la usuària “artesana” en els grups “àu\-dio” i “sudo” (seran grups secundaris) editant l’arxiu /etc/group (la usuària “artesana” té com grup principal el grup “artesana”) Visualitza els resultats amb la comanda id.}
+\mygraphic{imatges/15.png}
+
+\newpage
+\textsc{16. Investiga les conseqüències de col·locar en el camp corresponent a la contrasenya de la usuària artesana en l’arxiu /etc/passwd, els caràcters “*” i el caràcter blanc. Investiga les conseqüències de col·locar un “!” com primer caràcter en el camp corresponen a la contrasenya encriptada de la usuària artesana en l’arxiu \linebreak /etc/shadow.}
+
+Deixar el camp en blanc indica que no s'ha de fer servir contrasenya per iniciar sessió. Un signe d'excalamació com a primer caràcter indica que la contrasenya s'ha bloquejat, i un asterisc que no es pot iniciar sessió amb la contrasenya.
 
 \textsc{17. Copia i explica tots el camps corresponents a un registre de l’arxiu /etc/passwd.}
+Té set camps: nom d'usuari, contrasenya, UID, GID, gecos, directori d'inici i intèrpret d'ordres.
 
 \textsc{18. Copia i explica tots el camps corresponents a un registre de l’arxiu /etc/group.}
+Té quatre camps: nom, contrasenya, GID i usuàris que el tenen com a grup secundari.
 
 \textsc{19. Copia i explica tots el camps corresponents a un registre de l’arxiu /etc/shadow.}
+Té vuit camps: nom d'usuari, contrasenya encriptada, última vegada que es va canviar la contrasenya, el temps que ha de passar per tornar-la a canviar, quan caduca (i s'ha de tornar a canviar obligatoriament), quants dies abans que la contrasenya caduqui s'avisa a l'usuari, durant quants dies s'ha de poder fer servir una contrasenya caducada (sense que es bloquegi el compte) i quan caducarà el compte de l'usuari (i no podrà iniciar sessió de cap manera). També hi ha un novè camp reservat per a ús futur.
 
-\textsc{20. Copia i explica tots el camps corresponents a un registre de l’arxiu  /etc/gshadow.}
+\textsc{20. Copia i explica tots el camps corresponents a un registre de l’arxiu /etc/gshadow.}
 
+Té quatre camps: nom, contrasenya encriptada, administradors que poden modificar la contrasenya o els usuàris i els usuàris que no han d'entrar la contrasenya del grup per accedir-hi.
+
+\section{Gestió d’usuaris per lots}
 \textsc{21. Volem donar d’alta de manera automàtica a tots els alumnes de la classe de primer de dai. Genera un arxiu en text pla (codi ASCIII) anomenat alumnes\_dai1.txt, amb les dades dels alumnes de la classe. Cada fila a de contenir la informació de cada alumne, amb el mateix format que el que apareix en l’arxiu /etc/passwd (els mateixos camps, separats per “:”) Utilitza l’arxiu alumnes\_dai1.txt per donar d’alta automàtica a tots els alumnes de la classe i comprova els resultats.}
+\mygraphic{imatges/21a.png}
+\mygraphic{imatges/21b.png}
 
+\newpage
+\section{Gestió d’usuaris  per línia de comandes}
 \textsc{22. Crea des de la línia de comandes l’usuari dai1, amb contrasenya dai1dai. }
+\mygraphic{imatges/22.png}
 
+\newpage
 \textsc{23. Mostra el valors que genera per defecte l’ordre useradd. Consulta el contigut de l’arxiu /etc/default/useradd. }
+\mygraphic{imatges/23a.png}
+\mygraphic{imatges/23b.png}
 
-\textsc{24. Fes una copia de seguretat dels arxius continguts en el directori /etc/skeel/ al directori /etc/esquelet. Edita l’arxiu /etc/esquelet/.profile i afegeix al final de l’arxiu la línia següent: echo “Benvingut \$USER a la sessió Ubuntu”. Quin efecte tindrà aquesta acció?}
+\newpage
+\textsc{24. Fes una copia de seguretat dels arxius continguts en el directori /etc/skeel/ al directori /etc/esquelet. Edita l’arxiu \linebreak /etc/esquelet/.profile i afegeix al final de l’arxiu la línia següent: echo “Benvingut \$USER a la sessió Ubuntu”. Quin efecte tindrà aquesta acció?}
+
+Farà que quan s'iniciï sessió es mostri el aquest missatge.
+
+\mygraphic{imatges/24a.png}
+\mygraphic{imatges/24b.png}
+
 
 \textsc{Crea des de la línia de comandes, i en una única ordre, l’usuari asi1, amb les següents opcions:}
 
@@ -121,8 +206,14 @@ GID:2000
 \item shell: sh
 \item contrasenya: alumne (l’has d’agafar de la contrasenya encriptada de l’arxiu /etc/shadow corresponent a l’usuari alumne) 
 \end{itemize}
-\textsc{Obre sessió d’usuari asi1 i comprova els resultats.}
 
+\mygraphic{imatges/24c.png}
+
+\newpage
+\textsc{Obre sessió d’usuari asi1 i comprova els resultats.}
+\mygraphic{imatges/24d.png}
+
+\newpage
 \textsc{25. Modifica des de la línia de comandes les següents opcions l’usuari asi1:}
 \begin{itemize}
 \item Directori personal: /home/asi
@@ -133,8 +224,11 @@ GID:2000
 \item directori esquelet: /etc/skel
 \item shell: bash
 \end{itemize}
+\mygraphic{imatges/25.png}
+
 
 \textsc{26. Canvia el camp “gecos” de l’usuari asi1 amb la ordre chfn.}
+\mygraphic{imatges/26.png}
 
 \textsc{27. Desa la línia de l’arxiu /etc/shadow corresponen a l’usuari asi1 en l’arxiu contrasenya.txt. Modifica des de la línia de comandes les següents opcions l’usuari asi1 referents a la política de contrasenyes:}
 
@@ -146,12 +240,26 @@ GID:2000
 \end{itemize}
 
 \textsc{Torna a desar la línia de l’arxiu /etc/shadow corresponen a l’usuari asi1 en l’arxiu contrasenya.txt, mantenint el contingut anterior. Visualitza el canvis produïts en l’arxiu contrasenya.txt (/etc/shadow) i compara-la amb que havia previament.}
+\mygraphic{imatges/27.png}
 
+\newpage
 \textsc{28. Elimina des de la línia de comandes un dels usuaris de la classe que ja no vingui o que s’hagi donat de baixa. S’esborren tots els arxius que són de la seva propietat?}
 
+Per defecte no s'esborren, cal afegir l'opció -f per fer-ho.
+\mygraphic{imatges/28.png}
+
+\newpage
 \textsc{29. Quins són els efectes de les comandes pwconv i pwunconv sobre els arxius /etc/passwd i /etc/shadow}
 
-\textsc{30. Comprova la integritat dels arxius /etc/passwd i /etc/group.}
+El primer mou les constrasenyes al fitxer shadow, i el segon les torna al passwd.
+\mygraphic{imatges/29.png}
 
+\newpage
+\textsc{30. Comprova la integritat dels arxius /etc/passwd i /etc/group.}
+\mygraphic{imatges/30.png}
+
+\newpage
 \textsc{31. Crea el grup programadors. Assigna com grup principal del l’usuari asi1, el grup programador.}
+\mygraphic{imatges/31.png}
+
 \end{document}
