--- a/uf2/nf2/traduccio_python/traduccio_python.tex
+++ b/uf2/nf2/traduccio_python/traduccio_python.tex
@@ -23,7 +23,7 @@
 \newcommand{\acttipus}{Pràctica}
 \newcommand{\actnom}{Traducció d'un programa a script amb Python}
 
-\newcommand*{\autor}{Eina Coma Bages}
+\newcommand{\autor}{Eina Coma Bages}
 
 %% Entreliniats
 \linespread{1.5}
