--- a/uf2/nf2/particionament_linux/particionament_linux.tex
+++ b/uf2/nf2/particionament_linux/particionament_linux.tex
@@ -17,7 +17,7 @@
 \newcommand{\ufnom}{Gestió de la informació i de recursos en una xarxa.}
 
 \newcommand{\acttipus}{Pràctica}
-\newcommand{\actnom}{Scripting en bash}
+\newcommand{\actnom}{Particionament des de consola a Linux}
 
 \newcommand*{\autor}{Eina Coma Bages}
 
@@ -37,7 +37,7 @@
 \addtolength{\textheight}{2cm}
 
 %% Comandes personalitzades
-\newcommand{\mygraphic}[2][width=\textwidth]{\begin{center}
+\newcommand{\mygraphic}[2][height=0.45\textheight]{\begin{center}
 		\centering\includegraphics[#1]{#2}\par
 \end{center}}
 
@@ -50,37 +50,66 @@
 \newpage
 \textsc{1. Visualitza les particions del disc dur de la maquina virtual on s'ha instal\textperiodcentered lat Ubuntu, des d'un entorn gràfic i des de la línia de comandes. Visualitza les particions que el sistema ha muntat automàticament.}
 
+\mygraphic{imatges/1a.png}
+\mygraphic{imatges/1b.png}
+\mygraphic{imatges/1c.png}
+
 \newpage
 \textsc{2. Analitza l'espai dels dispositius presents (devices). Llistar l'espai total i el disponible de cada partició muntada, tot mostrant el sistema de fitxers que utilitza. Cal mostrar la informació en unitas K, M o G. Llistar només els sistemes de fitxers ext3. Llistar només els sistemes de fitxers virtuals. Quins són?}
+
+\mygraphic{imatges/2.png}
 
 \newpage
 \textsc{3. Llista l'ocupació de l'espai de disc. Llistar (K, M o G) l'ocupació de disc de /boot. Llistar l'ocupació de disc de /etc resumint a un nivell de profunditat.}
 
+\mygraphic{imatges/3.png}
+
 \newpage
 \textsc{4. Visualitza la informació de l'ordre “free” i l'ordre “stat” pel directori /etc i per l'arxiu /etc/fstab.}
 
+\mygraphic{imatges/4.png}
+
 \newpage
-\textsc{5. Afegeix a la teva maquina virtual 3 disc durs sata de 10, 15 i 20 GB respectivament. Fes una captura de pantalla dels dispositius d' emmagatzematze i de les taules de particions de cadascun dels discs instal·lats.}
+\textsc{5. Afegeix a la teva maquina virtual 3 disc durs sata de 10, 15 i 20 GB respectivament. Fes una captura de pantalla dels dispositius d'emmagatzematze i de les taules de particions de cadascun dels discs instal·lats.}
+
+\mygraphic{imatges/5a.png}
+\mygraphic{imatges/5b.png}
+\mygraphic{imatges/5c.png}
 
 \newpage
 \textsc{6. Utilitza la línia de comandes per fer dues particions primàries contigües en el primer disc sata (/dev/sdb). La primera partició de 3GB de capacitat i la segona de 4GB.}
 
+\mygraphic{imatges/6.png}
+
 \newpage
 \textsc{7. Assigna l'etiqueta “particio\_linux” a la primera partició i l'etiqueta “particio\_windows” a la segona partició. Formata amb sistema d'arxius ext4 la primera partició (particio\_linux) i amb sistema d'arxius ntfs la segona partició (particio\_windows).}
+
+\mygraphic{imatges/7.png}
 
 \newpage
 \textsc{8. Visualitza el contingut del directori /mnt. Munta la primera partició en aquest directori (/mnt). Visualitza novament el contingut del directori /mnt i afegeix un arxiu de text (prueba.txt). Si no pot fer-ho, afegeix-li els permisos de lectura, escriptura i execució per a tots el usuaris (sudo chmod 777 /mnt). Per últim, desmunta la partició.}
 
+\mygraphic{imatges/8.png}
+
 \newpage
 \textsc{9. Comprova la integritat dels sistemes d'arxius de les dues particions del disc hdb, i del disc del sistema (hda).}
+
+\mygraphic{imatges/9.png}
 
 \newpage
 \textsc{10. Visualitza el contingut del directori /mnt. Munta novament la primera partició en el directori (/mnt), i torna-la a muntar en calent, però en mode de “només lectura” (ro). Intenta crear un directori anomenat carpeta amb l'ordre mkdir, i llegeix l'arxiu Prueba amb l'ordre cat.}
 
+\mygraphic{imatges/10.png}
+
 \newpage
 \textsc{11. Visualitza l'espai en els dispositius presents (devices).Llistar l'espai total i el disponible de cada partició muntada, tot mostrant el sistema de fitxers que utilitza.}
 
+\mygraphic{imatges/11.png}
+
 \newpage
 \textsc{12. Llista els “swaps” actius. Crea una tercera partició primària en el disc sdb, de 1GB de capacitat, destinada a memòria virtual. Activa i desactiva el swap manualment.}
+
+\mygraphic{imatges/12.png}
+
 
 \end{document}
